tests & POM fixes